# zhen_robot

./: README.md
docs/: AMCL定位漂移Bug分析与修复报告.md
src/amr/: CMakeLists.txt  package.xml
src/amr/config/: logistics_locations.json  nav2_params.yaml
src/amr/launch/: amcl_all_launch.py  mapping_all_launch.py  navigation_launch.py  robot_launch.py  slam_all_launch.py  slam_launch.py  system_all_alunch.py  system_all_launch.py
src/amr/map/: warehouse_map.pgm  warehouse_map.yaml
src/amr/rviz/: warehouse.rviz
src/amr/urdf/: amr_robot.urdf
src/amr/worlds/: simple_warehouse.world  warehouse1.world
src/arm_control/: package.xml  setup.cfg  setup.py
src/arm_control/arm_control/: arm_controller.py
src/main_logic/: package.xml  setup.cfg  setup.py
src/main_logic/main_logic/: battery_simulator.py  task_manager.py
src/vision/: package.xml  setup.py
src/vision/vision/: color_detector.py
