<?xml version="1.0"?>
<package format="3">
  <name>main_logic</name>
  <version>0.0.0</version>
  <description>AMR Mission Coordinator and State Machine</description>
  <maintainer email="zhen@todo.todo">zhen</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nav2_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>