<?xml version="1.0"?>
<package format="3">
  <name>vision</name>
  <version>0.0.0</version>
  <description>OpenCV based target detection for AMR</description>
  <maintainer email="zhen@todo.todo">zhen</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>opencv2</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>